--- a/TcgSdk/PSTcgSdkCompiled/PSTcgSdkCompiled.csproj
+++ b/TcgSdk/PSTcgSdkCompiled/PSTcgSdkCompiled.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EBE8FEED-9FB8-438F-9306-14A4D6E0D6E8}</ProjectGuid>
+    <ProjectGuid>{E7CDE4A7-0143-4D79-8CD5-D64186C0C3E5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TcgSdk</RootNamespace>
-    <AssemblyName>TcgSdk</AssemblyName>
+    <RootNamespace>PSTcgSdkCompiled</RootNamespace>
+    <AssemblyName>PSTcgSdkCompiled</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,12 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management.Automation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Management.Automation.6.1.7601.17515\lib\net45\System.Management.Automation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,30 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\Cards\ITcgCardCollection.cs" />
-    <Compile Include="Common\ITcgSdkObject.cs" />
-    <Compile Include="Common\TcgSdkRequestParameter.cs" />
-    <Compile Include="Common\TcgSdkResponseType.cs" />
-    <Compile Include="Common\Cards\ITcgCard.cs" />
-    <Compile Include="Common\Cards\ITcgCardDeck.cs" />
-    <Compile Include="Common\ITcgSdkResponseFactory.cs" />
-    <Compile Include="Common\TcgSdkRequest.cs" />
-    <Compile Include="Common\TcgSdkResponse.cs" />
-    <Compile Include="Common\TcgSdkErrorLog.cs" />
-    <Compile Include="Common\TcgSdkUtility.cs" />
-    <Compile Include="Configuration\TcgSdkConfiguration.cs" />
-    <Compile Include="Common\ITcgSdkResponse.cs" />
-    <Compile Include="Magic\MagicCard.cs" />
-    <Compile Include="Magic\MagicSet.cs" />
-    <Compile Include="Pokemon\PokemonCard.cs" />
-    <Compile Include="Pokemon\PokemonSet.cs" />
+    <Compile Include="GetITcgCards.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="readme.txt" />
+    <ProjectReference Include="..\TcgSdk\TcgSdk.csproj">
+      <Project>{ebe8feed-9fb8-438f-9306-14a4d6e0d6e8}</Project>
+      <Name>TcgSdk</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
