Page size and number are now functioning correctly for all response objects.

--- a/TcgSdk/PSTcgSdkCompiled/PSTcgSdkCompiled.csproj
+++ b/TcgSdk/PSTcgSdkCompiled/PSTcgSdkCompiled.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GetITcgCards.cs" />
+    <Compile Include="NewTcgSdkRequestParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
